Fix disqus section in yml

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ twitter_username: apmiller108
 github_username:  apmiller108
 linkedin: https://www.linkedin.com/in/alex-miller-551b0b59
 website: "http://www.alex-miller.co"
-disqus.shortname: "blog-alex-miller"
+disqus: 
+  shortname: "blog-alex-miller"
 til: "https://alex-til.herokuapp.com"
 sass:
   sass_dir: _sass
